<resources>
    <string name="app_name">BSharp</string>
    <string name="drawer_open_desc">Open Menu</string>
    <string name="drawer_close_desc">Close Menu</string>

    <string name="recordTitle">Audio Message</string>
    <string name="recordStr">Record</string>
    <string name="playRecStr">Play</string>
    <string name="stopRecStr">Stop</string>

    <string name="err">Error</string>
    <string name="audio_del">Audio file deleted.</string>
    <string name="delete">Delete</string>

    <string name="tuningPlane">Tuning Plane</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
